# floq-cli

./: Cargo.toml  readme.md
.github/workflows/: master.yml  release.yml  rust-push-master.yml  rust-release.yml  rust.yml
src/: auth.rs  cmd.rs  http_client.rs  main.rs  time.rs
src/floqtt_tui/: events.rs  mod.rs  state.rs  tui.rs  util.rs
src/http_client/: mod.rs  projects.rs  timetrack.rs
src/print/: mod.rs
src/project/: http.rs  mod.rs
src/timestamp/: history.rs  http.rs  mod.rs
src/timetrack/: http.rs  mod.rs
src/user/: auth.rs  config.rs  http.rs  mod.rs
