[package]
name = "floq-timetracker-cli"
version = "0.1.0"
authors = ["emil daijiro <eg@blank.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6"
futures = "0.3"
surf = "2.0"
rouille = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = { version = "0.15" }
clap = "3.0.0-beta.1"

[dev-dependencies]
demonstrate = { version = "0.4" }
